# rotato-rs

./: Cargo.toml  README.md  build.rs
resources/: resources.res.lib
src/: daemon.rs  enums.rs  id.rs  main.rs  win_disp_fns.rs  window.rs
